# inspectrum

./: CMakeLists.txt  README.md  feature.txt
.github/workflows/: build.yml
cmake/Modules/: FindLiquid.cmake
src/: CMakeLists.txt  crashlog.cpp  cursors.cpp  fft.cpp  fft.h  frequencydemod.cpp  inputsource.cpp  inputsource.h  main.cpp  plots.cpp  plotview.cpp  plotview.h  samplesource.h  spectrogramcontrols.cpp  spectrogramcontrols.h  spectrogramplot.cpp  spectrogramplot.h  thresholdplot.cpp  thresholdplot.h  traceplot.cpp  tuner.cpp  tunertransform.h
